--- a/_posts/2018-07-22-capstone.md
+++ b/_posts/2018-07-22-capstone.md
@@ -1,6 +1,6 @@
 
 # Genre Explorations and Predictions 
-# This project started out as an investigation into training a machine learing model to predict genres utilizing data scraped from the spotify api. Further investigation led to a cross examination of how human intuition, particulary my own intuition, compares to machine learning clustering algorithms. 
+This project started out as an investigation into training a machine learing model to predict genres utilizing data scraped from the spotify api. Further investigation led to a cross examination of how human intuition, particulary my own intuition, compares to machine learning clustering algorithms. 
 
 The first part of this project is about learning to use spotipy, a python wrapper for the spotify api. Scrapped data was saved as .csv files. Some data munging came next dealing with nulls and duplicated data. 
 The second part was the most crucial to this project. The song data from spotify came with multiple genres attached to an artist/song. To make a predictor, each song would need a concise genre to target. This led me to a binning function where each song was chosen carefully into 12 genres. This function added subjectivity to the modeling process as different people will interperet what genres should be binned into. Once all the songs were binned, more munging followed as songs which did not fit into any genre were given NaN values and removed. 
