--- a/_posts/2018-07-22-capstone.md
+++ b/_posts/2018-07-22-capstone.md
@@ -11,7 +11,7 @@ The modeling process than followed. The data was split into a training, validati
 
 Next was exploring how well a machine learning alogrithm, know as k-means cluster, can produce 12 distinct genres. 12 distict clusters were made and treated as genres. Each cluster was given extensive exploratory data analysis, with charts of each cluster's feature. The last part of the project was seeing how the 12 binned genres compared to the 12 clusters.
 
-
+[Follow work here](https://github.com/ssanowitz24/Capstone---Genre-Exploration-and-Prediction)
 
 ```python
 import spotipy as sp
